syntax = "proto3";

import "google/protobuf/wrappers.proto";

option csharp_namespace = "XeGo.Services.Price.Grpc.Protos";

service PriceProtoService {
	rpc GetPriceByRideId(GetPriceByRideIdRequest) returns (PriceResponse);
	rpc CreatePrice(CreatePriceRequest) returns (PriceResponse);
	rpc EditPrice(EditPriceRequest) returns (PriceResponse);
}

message GetPriceByRideIdRequest {
	int32 rideId = 1;
}

message CreatePriceRequest {
	int32 rideId = 1;
	google.protobuf.Int32Value discountId = 2;
	int32 vehicleTypeId = 3;
	double distanceInMeters = 4;
	string modifiedBy = 5;
}

message EditPriceRequest {
	int32 rideId = 1;
	google.protobuf.Int32Value discountId = 2;
	google.protobuf.Int32Value vehicleTypeId = 3;
	google.protobuf.DoubleValue distanceInMeters = 4;
	string modifiedBy = 5;
}

message PriceResponse {
  string data = 1;
  bool isSuccess = 2;
  string message = 3;
}